RESOLVED FIXED200633
[GStreamer] Deal with slow buffer consumption in GStreamerMediaStreamSource
https://bugs.webkit.org/show_bug.cgi?id=200633
Summary [GStreamer] Deal with slow buffer consumption in GStreamerMediaStreamSource
Thibault Saunier
Reported 2019-08-12 10:43:09 PDT
[GStreamer] Deal with slow buffer consumption in GStreamerMediaStreamSource
Attachments
Patch (9.94 KB, patch)
2019-08-12 10:54 PDT, Thibault Saunier
no flags
Thibault Saunier
Comment 1 2019-08-12 10:54:01 PDT
Philippe Normand
Comment 2 2019-08-15 07:06:18 PDT
Comment on attachment 376077 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=376077&action=review > Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:553 > static gboolean webkitMediaStreamSrcSetupAppSrc(WebKitMediaStreamSrc* self, > - MediaStreamTrackPrivate* track, GstElement** element, > + MediaStreamTrackPrivate* track, WebKitMediaStreamSrc::SourceData* data, > GstStaticPadTemplate* pad_template, bool onlyTrack) Where's the call site for this? I don't see it updated in this patch?
Thibault Saunier
Comment 3 2019-08-15 07:24:05 PDT
Comment on attachment 376077 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=376077&action=review >> Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:553 >> GstStaticPadTemplate* pad_template, bool onlyTrack) > > Where's the call site for this? I don't see it updated in this patch? In `webkitMediaStreamSrcAddTrack` - no need to update it here as it does: > res = webkitMediaStreamSrcSetupAppSrc(self, track, &self->audioSrc, &audioSrcTemplate, onlyTrack); and `self->audioSrc` has been changed to `WebKitMediaStreamSrc::SourceData`.
WebKit Commit Bot
Comment 4 2019-08-15 10:17:59 PDT
Comment on attachment 376077 [details] Patch Clearing flags on attachment: 376077 Committed r248721: <https://trac.webkit.org/changeset/248721>
WebKit Commit Bot
Comment 5 2019-08-15 10:18:00 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2019-08-15 10:18:16 PDT
Note You need to log in before you can comment on or make changes to this bug.